gateway/httproute-inference.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: inference-route
spec:
  parentRefs:
  - name: minimal-gateway
  rules:
  - filters:
    - type: ExtensionRef
      extensionRef:
        group: gateway.kgateway.dev
        kind: InferenceExtension
        name: inference
    backendRefs:
    - name: inference-backend
      port: 80
